[package]
name = "asn1"
version = "0.1.0"
edition = "2021"
description = """
ASN.1 Library

Basically just wraps RustCrypto formats package

https://github.com/RustCrypto/formats
"""

[lib]
name = "asn1"
path = "src/lib.rs"

[dependencies]
x509-cert = { version = "0.2", path = "../formats/x509-cert" }
const-oid = { version = "0.9.2", features = ["db"] }
