[package]
name = "pki"
version = "0.1.0"
edition = "2021"
description = """
PKI Library

Basically just wraps some RustCrypto packages

https://github.com/RustCrypto
"""

[lib]
name = "pki"
path = "src/lib.rs"

[dependencies]
const-oid = { version = "0.9.2", features = ["db"] }
digest = { version = "0.10" }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
rsa = { version = "0.8", default-features = false, features = ["std"] }
x509-cert = { version = "0.2", path = "../formats/x509-cert" }
