[package]
name = "x509"
version = "0.1.0"
edition = "2021"
description = "Tool for describing and manipulating X.509 certificates"

[[bin]]
name = "x509"
path = "src/x509.rs"

[dependencies]
x509-cert = { version = "0.2", path = "../formats/x509-cert" }
const-oid = { version = "0.9.2", features = ["db"] }
clap = { version = "4", features = ["derive"] }
